--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,16 @@ a {
   margin-bottom: 0.9rem;
 }
 
+.nav {
+  margin-bottom: 2rem;
+}
+
+.nav a {
+  text-decoration: none;
+  font-size: 0.95rem;
+}
+
+.nav a:hover {
+  text-decoration: underline;
+}
+
